# cuda-quantum

./: build-and-run-expectation.sh  build-and-run.sh  fermioniq-todo.txt
docs/sphinx/examples/cpp/basics/: expectation_values  expectation_values.cpp
docs/sphinx/examples/cpp/providers/: fermioniq-async.cpp  fermioniq.cpp
lib/Optimizer/CodeGen/: Passes.cpp
python/runtime/utils/: PyRemoteRESTQPU.cpp
runtime/common/: MeasureCounts.cpp  RestClient.cpp
runtime/cudaq/algorithms/: observe.h
runtime/cudaq/platform/: qpu.h
runtime/cudaq/platform/default/rest/helpers/: CMakeLists.txt
runtime/cudaq/platform/default/rest/helpers/fermioniq/: CMakeLists.txt  FermioniqServerHelper.cpp  fermioniq.yml
runtime/cudaq/platform/fermioniq/: FermioniqBaseQPU.h  FermioniqQPU.cpp  FermioniqServerHelper.cpp  FermioniqServerHelper.h  fermioniq.yml
